Update to production-ready version with security, Jira integration, and enhanced features
- Add Retell signature verification for webhook security
- Add event type filtering (only process call_analyzed events)
- Add Jira integration via REST API for IR calls
- Add Azure Communication Services email support
- Add non-IR call handling with separate workflow
- Add enhanced payload format support (old + new formats)
- Add transcript object support
- Add call cost tracking
- Add resilient error handling with Promise.allSettled
- Fix function registration (add missing import in index.ts)
- Fix package.json main entry point
- Add missing dependencies (retell-sdk, @azure/communication-email)

--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "dev": "npm run clean && npm run build && func start",
     "test": "echo \"No tests yet...\"",
     "test:flags": "./test-feature-flags.sh",
-    "deploy": "npm run build && func azure functionapp publish procircular-ir-webhook",
-    "logs": "func azure functionapp logstream procircular-ir-webhook"
+    "deploy": "npm run build && func azure functionapp publish pc-retell-webhook",
+    "deploy-v2": "npm run build && func azure functionapp publish pc-retell-webhook-v2",
+    "logs": "func azure functionapp logstream pc-retell-webhook",
+    "logs-v2": "func azure functionapp logstream pc-retell-webhook-v2"
   },
   "dependencies": {
+    "@azure/communication-email": "^1.0.0",
     "@azure/functions": "^4.0.0",
     "@sendgrid/mail": "^8.1.6",
+    "retell-sdk": "^4.53.0",
     "twilio": "^5.10.2"
   },
   "devDependencies": {
@@ -24,7 +28,7 @@
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   },
-  "main": "dist/src/{index.js,functions/*.js}",
+  "main": "dist/src/index.js",
   "keywords": [
     "azure-functions",
     "retell-ai",
